--- a/css/header.css
+++ b/css/header.css
@@ -1,70 +1,32 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+}
 header {
-  background-color: black;
-  color: aliceblue;
-  padding: 10px 0;
-  width: 100%;
-  height: var(--header-height);
   position: fixed;
-  top: 0;
   left: 0;
-  z-index: 999;
-  transform: top 0.3s;
+  top: 0;
+  width: 100%;
+  z-index: 50;
+  height: 150px;
+  transition: all 0.8s;
 }
 
-.container {
+header .wrap {
+  align-items: stretch;
   display: flex;
+  position: relative;
+  max-width: unset;
   justify-content: space-between;
-  align-items: center;
-  width: 80%;
-  margin: 1rem auto;
+  height: 100%;
 }
 
-.logo {
-  height: 2.2rem;
-}
-
-#header nav ul {
-  list-style: none;
-  display: flex;
-}
-
-#header nav ul li a {
-  color: aliceblue;
-  text-decoration: none;
-  padding: 5px 10px;
-  transition: background-color 0.3s;
-  font-size: 1.4rem;
-}
-
-#header nav ul li a:hover {
-  background-color: #575757;
-}
-
-/* Header RWD */
-
-@media (max-width: 768px) {
-  .container {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  #header nav {
-    width: 100%;
-  }
-
-  #header nav ul {
-    display: block;
-    flex-direction: column;
-    width: 100%;
-  }
-  #header nav ul li {
-    width: 100%;
-    margin: 0;
-  }
-
-  #header nav ul li a {
-    display: block;
-    padding: 10px 0;
-    text-align: center;
-  }
+.outerWrap {
+  max-width: 1920px;
+  margin: 0 auto;
+  position: relative;
+  overflow-x: hidden;
+  background-image: url(../assets/img/bg.png);
 }
