--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -1,5 +1,12 @@
 main {
-  padding: 30px;
+  /* padding: 30px; */
   transition: margin-top 0.5s;
   margin-top: calc(var(--header-height));
+}
+/*主頁圖片*/
+.section-hero img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
 }
